third_party/move/move-compiler-v2/tests/checking/variants/variants_parse_err1.exp

Diagnostics:
error: unexpected token
  ┌─ tests/checking/variants/variants_parse_err1.move:7:9
  │
7 │         Blue,
  │         ^^^^
  │         │
  │         Unexpected 'Blue'
  │         Expected ','
